bg(fixing snake case): Fixing snake case >- fixes snake case >- run unit test [fixes#167282665 ]
